--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <div class="container">
 <!-- pulsanti -->
             <section class="buttons">
-                <button class="add task">add task</button> 
-                <button class="add section">add section</button> 
+                <button class="add-task">Add Task</button> 
+                <button class="add-section">Add Section</button> 
             </section>
 <!-- new task -->
             <section>
