modifiche main container

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <main>
 <!-- container -->
-        <div class="container-main">
+        <div class="main-container">
 
 <!-- pulsanti -->
             <section class="buttons">
@@ -26,7 +26,7 @@
                 <button class="add-section">Add Section</button> 
             </section>
 
-            <div class="container-summary">
+            <div class="summary-container">
 <!-- new task -->
                 <section>
                     <details>
@@ -48,7 +48,7 @@
                 <section>
                     <details>
                         <summary>Upcoming</summary>
-                        <p class="summary-item"> <span class="cross"> &cross; </span> Schedule meeting with Alex <button class="category editorial">Editorial</button></p>
+                        <p class="summary-item"> <span class="cross"> &cross; </span> Schedule meeting with Alex </p>
                         <p class="summary-item"> <span class="check"> &check; </span> Homepage refresh <button class="category website">Website</button></p>
                         <p class="summary-item"> <span class="check"> &check; </span> Onboard new Sales team members <button class="category sales">Sales</button></p>
                         <p class="summary-item"> <span class="check"> &check; </span> Review editorial calendar <button class="category editorial">Editorial</button></p>
